--- a/11-similarity-embeddings.ipynb
+++ b/11-similarity-embeddings.ipynb
@@ -9,36 +9,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c08c809-10c6-42aa-9a01-0477ca426b2f",
+   "cell_type": "markdown",
+   "id": "afa37856",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import glob\n",
-    "import os"
+    "Sätze extrahiert aus der UN-Generaldebatte 2022"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef5ecf2e-a314-450a-917b-c4b524aff977",
+   "id": "da81a054",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = []\n",
-    "for n in glob.glob(\"un/TXT/Session 77 - 2022/*.txt\"):\n",
-    "    data.append({\"country\": os.path.basename(n.replace(\"_77_2022.txt\", \"\")), \"text\": open(n).read() })"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0112212d-2b8e-4b38-b2c2-333799200b21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
+    "!test -f sentences.txt || wget https://github.com/datanizing/m3-llm-workshop/raw/main/sentences.txt"
    ]
   },
   {
@@ -48,102 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_colwidth', 500)\n",
-    "df = pd.DataFrame(data)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "09eb4820-19d9-4dbf-9690-d62a2df94c59",
-   "metadata": {},
-   "source": [
-    "# Sentence segmentation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33e32ba2-bd5e-40cc-bf91-4fe46de6a0ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import spacy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3232940b-b7f3-45d1-9933-e86b5a4eff56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python -m spacy download en_core_web_sm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5891c67e-f9bd-496c-b4aa-a4d904cbe3d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp = spacy.load(\"en_core_web_sm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73cb5d77-1257-4e77-9ff7-638614016a62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm.auto import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "202f62ea-b081-4e3d-9719-5d934b566649",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# runs 30 seconds or so\n",
-    "sentences = []\n",
-    "for text in tqdm(df[\"text\"]):\n",
-    "    doc = nlp(text)\n",
-    "    for sentence in doc.sents:\n",
-    "        sentences.append(str(sentence).strip())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8d67a487-962e-4e91-ad7b-2aa87309c647",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d348e426-7359-41c3-a06b-8919d0587d56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(sentences)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2aefb111-d258-4247-ae4b-6507e8583854",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open(\"sentences.txt\", \"w\").write(\"@@@\".join(sentences))"
+    "sentences = open(\"sentences.txt\").read().split(\"@@@\")"
    ]
   },
   {
@@ -157,22 +47,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "960c8379-bb43-43a1-ab84-d1efed83cd32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install sentence_transformers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9ca1b2b1-9072-4b60-b8c4-4130b8f8d6dd",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
-    "model = SentenceTransformer('multi-qa-MiniLM-L6-cos-v1')"
+    "model = SentenceTransformer('intfloat/e5-base-v2')"
    ]
   },
   {
@@ -183,7 +63,7 @@
    "outputs": [],
    "source": [
     "# can take a minute or two depending on CPU/GPU configuration\n",
-    "sembeddings = model.encode(sentences, show_progress_bar=True)"
+    "sembeddings = model.encode([\"passage: \" + s for s in sentences], show_progress_bar=True)"
    ]
   },
   {
@@ -194,7 +74,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "with open(\"sentences.npy\", \"wb\") as f:\n",
+    "with open(\"sentences-e5.npy\", \"wb\") as f:\n",
     "    np.save(f, sembeddings)"
    ]
   },
@@ -211,31 +91,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b01c518-5b16-4075-a3f6-c3f9851ec204",
+   "id": "a9baa068-3e5d-4618-9a2b-4af333d0db67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2 = SentenceTransformer('multi-qa-mpnet-base-dot-v1')"
+    "model2 = SentenceTransformer('all-mpnet-base-v2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2689c2f-9338-4b86-b776-72f78aae0cfc",
+   "id": "bd2eeae8-8eb7-4eb2-9bcc-9191459ede18",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# can take a minute or two depending on CPU/GPU configuration\n",
     "sembeddings2 = model2.encode(sentences, show_progress_bar=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad4dced-d058-464e-a634-d70c16cf153e",
+   "id": "338ee160-3e09-43e5-9d46-387b5b37c256",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"sentences2.npy\", \"wb\") as f:\n",
+    "import numpy as np\n",
+    "with open(\"sentences-mpnet.npy\", \"wb\") as f:\n",
     "    np.save(f, sembeddings2)"
    ]
   },
@@ -276,7 +158,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "pd.set_option('display.max_colwidth', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31901804-2f16-4236-b6c2-7bffb1dc63cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search(\"query: Is the climate crisis worse for poorer countries?\", \n",
+    "       sentences, sembeddings, model)"
    ]
   },
   {
@@ -286,33 +180,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"The climate crisis is worse in poorer countries\", sentences, sembeddings, model)"
+    "search(\"query: Is the war on Ukraine caused by Russia?\", \n",
+    "       sentences, sembeddings, model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be5966b4-4df5-46fa-b268-2539e86fb03a",
+   "id": "457d9c8f-f013-4965-9232-b4ae20128b4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"The climate crisis is worse in poorer countries\", sentences, sembeddings2, model2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a32f367-fe1f-4528-867f-147b4dc8c92c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "search(\"Die Klimakrise betrifft vor allem ärmere Länder\", sentences, sembeddings2, model2)"
+    "search(\"query: Is the climate crisis worse for poorer countries?\", \n",
+    "       sentences, sembeddings2, model2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a28cfbcc-6e7f-4e6f-983d-2505bf7841f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search(\"Is the war on Ukraine caused by Russia?\", \n",
+    "       sentences, sembeddings2, model2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e93888b2-8108-4d8a-a93b-0e17c171d776",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -334,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
