accelerate für Colab

--- a/21-mistral.ipynb
+++ b/21-mistral.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "818e3213",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f8ea24e0",
    "metadata": {},
    "outputs": [],
