--- a/21a-mistral.ipynb
+++ b/21a-mistral.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ec2c0ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f8ea24e0",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "prompt = \"Tell me about Alan Turing\"\n",
+    "prompt = \"Explain Heise Zeitschriftenverlag\"\n",
     "prompt_template=f'''<s>[INST] {prompt} [/INST]\n",
     "'''\n",
     "\n",
