neue Version März 2025

--- a/02-bert-classification.ipynb
+++ b/02-bert-classification.ipynb
@@ -12,33 +12,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "JSx16UvigML9"
-   },
-   "source": [
-    "Kontakt: christian.winkler@datanizing.com"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "kS9wBwu7gML-"
-   },
-   "source": [
-    "Es lohnt sich durchaus, andere Modelle von https://huggingface.co/models auszuprobierenwie z.B. `dbmdz/bert-base-german-uncased` von der Bayerischen Staatsbibliothek."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "WpboHpI6gML-"
-   },
-   "source": [
-    "Angelehnt an https://mccormickml.com/2019/07/22/BERT-fine-tuning/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "HC8n_sLsgML_"
    },
    "source": [
@@ -80,7 +53,20 @@
    },
    "outputs": [],
    "source": [
-    "!test -f newsticker-2022-2023-good-bad.csv.gz || wget https://github.com/datanizing/m3-llm-workshop/raw/main/newsticker-2022-2023-good-bad.csv.gz"
+    "import os\n",
+    "import urllib.request\n",
+    "\n",
+    "# File name and URL\n",
+    "file_name = \"newsticker-2022-2023-good-bad.csv.gz\"\n",
+    "url = \"https://github.com/datanizing/m3-llm-workshop/raw/main/newsticker-2022-2023-good-bad.csv.gz\"\n",
+    "\n",
+    "# Check if the file exists, if not, download it\n",
+    "if not os.path.isfile(file_name):\n",
+    "    print(f\"{file_name} does not exist. Downloading...\")\n",
+    "    urllib.request.urlretrieve(url, file_name)\n",
+    "    print(f\"Downloaded {file_name}.\")\n",
+    "else:\n",
+    "    print(f\"{file_name} already exists.\")"
    ]
   },
   {
@@ -113,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "# Labels auf Integer wandeln\n",
+    "# Labels auf Integer wandeln, pytorch unterstützt nur Integer-Labels\n",
     "df[\"label\"] = 0\n",
     "df.loc[df[\"quality\"] == \"good\", \"label\"] = 1\n",
     "df.head()"
@@ -145,26 +131,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "x67RcXgFiS_5"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install transformers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "UyWJqjINgMMR"
    },
    "outputs": [],
    "source": [
-    "from transformers import BertTokenizer\n",
+    "from transformers import AutoTokenizer\n",
     "\n",
-    "# model_name = \"dbmdz/bert-base-german-uncased\"\n",
-    "model_name = \"bert-base-multilingual-uncased\"\n",
-    "tokenizer = BertTokenizer.from_pretrained(model_name, do_lower_case=True)"
+    "# model_name = \"google-bert/bert-base-german-cased\"\n",
+    "model_name = \"dbmdz/bert-base-german-uncased\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name, do_lower_case=True)"
    ]
   },
   {
@@ -196,9 +171,9 @@
     "    encoded_dict = tokenizer.encode_plus(\n",
     "                        t,\n",
     "                        add_special_tokens = True,    # '[CLS]' und '[SEP]'\n",
-    "                        max_length = 64,\n",
+    "                        max_length = max_len,\n",
     "                        truncation = True,\n",
-    "                        pad_to_max_length = True,\n",
+    "                        padding='max_length',\n",
     "                        return_attention_mask = True,  # Attention-Masks erzeugen\n",
     "                        return_tensors = 'pt',         # pytorch-Tensoren als Ergebnis\n",
     "                   )\n",
@@ -208,7 +183,7 @@
     "# Python-Listen in Tensoren wandeln\n",
     "input_ids = torch.cat(input_ids, dim=0)\n",
     "attention_masks = torch.cat(attention_masks, dim=0)\n",
-    "labels = torch.tensor(labels)\n",
+    "labels = labels.clone().detach()\n",
     "\n",
     "# Headline, Tokenisierung und IDs anzeigen\n",
     "print(text[0])\n",
@@ -261,7 +236,7 @@
     "# die BERT-Autoren empfehlen für Finetuning Batch-Sizes von 16 oder 32\n",
     "batch_size = 32\n",
     "\n",
-    "# DataLoader fÃ¼r die beiden Datensets erzeugen (man könnte auch RandomSampler verwenden)\n",
+    "# DataLoader für die beiden Datensets erzeugen (man könnte auch RandomSampler verwenden)\n",
     "train_dataloader = DataLoader(train_dataset, sampler = RandomSampler(train_dataset), batch_size = batch_size)\n",
     "validation_dataloader = DataLoader(val_dataset, sampler = SequentialSampler(val_dataset), batch_size = batch_size)"
    ]
@@ -283,16 +258,16 @@
    },
    "outputs": [],
    "source": [
-    "from transformers import BertForSequenceClassification, AdamW, BertConfig\n",
+    "from transformers import AutoModelForSequenceClassification\n",
     "\n",
     "# das Modell muss zum Tokenizer passen!\n",
-    "model = BertForSequenceClassification.from_pretrained(\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\n",
     "    model_name, \n",
     "    num_labels = 2, # wir haben nur gut oder shlecht\n",
     "    output_attentions = False,\n",
-    "    output_hidden_states = False # wir benÃ¶tigen keine Embeddings\n",
+    "    output_hidden_states = False # wir benötigen keine Embeddings\n",
     ")\n",
-    "# hier evtl. model.cpu() einsetzen\n",
+    "# hier ohne GPU model.cpu() einsetzen\n",
     "model.cuda()"
    ]
   },
@@ -305,6 +280,7 @@
    "outputs": [],
    "source": [
     "# Optimierer auswählen, AdamW ist Standard\n",
+    "from torch.optim import AdamW\n",
     "optimizer = AdamW(model.parameters(), lr = 2e-5)"
    ]
   },
@@ -360,7 +336,7 @@
     "torch.manual_seed(seed_val)\n",
     "torch.cuda.manual_seed_all(seed_val)\n",
     "\n",
-    "# Statistik fÃ¼r das Training\n",
+    "# Statistik für das Training\n",
     "training_stats = []\n",
     "\n",
     "for epoch_i in trange(epochs, desc=\"Epoche\"):\n",
@@ -512,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
