--- a/03-svm.ipynb
+++ b/03-svm.ipynb
@@ -10,15 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "JSx16UvigML9"
-   },
-   "source": [
-    "Kontakt: christian.winkler@datanizing.com"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -26,7 +17,20 @@
    },
    "outputs": [],
    "source": [
-    "!test -f newsticker-2022-2023-good-bad.csv.gz || wget https://github.com/datanizing/m3-llm-workshop/raw/main/newsticker-2022-2023-good-bad.csv.gz"
+    "import os\n",
+    "import urllib.request\n",
+    "\n",
+    "# File name and URL\n",
+    "file_name = \"newsticker-2022-2023-good-bad.csv.gz\"\n",
+    "url = \"https://github.com/datanizing/m3-llm-workshop/raw/main/newsticker-2022-2023-good-bad.csv.gz\"\n",
+    "\n",
+    "# Check if the file exists, if not, download it\n",
+    "if not os.path.isfile(file_name):\n",
+    "    print(f\"{file_name} does not exist. Downloading...\")\n",
+    "    urllib.request.urlretrieve(url, file_name)\n",
+    "    print(f\"Downloaded {file_name}.\")\n",
+    "else:\n",
+    "    print(f\"{file_name} already exists.\")\n"
    ]
   },
   {
@@ -162,9 +166,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
