--- a/11-similarity-embeddings.ipynb
+++ b/11-similarity-embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b64ece1d-7558-4fb6-a98b-ad06283bb898",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Load data"
@@ -10,78 +10,114 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afa37856",
+   "id": "1",
    "metadata": {},
    "source": [
-    "Sätze extrahiert aus der UN-Generaldebatte 2022"
+    "Sätze extrahiert aus der UN-Generaldebatte 2023"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da81a054",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!test -f sentences.txt || wget https://github.com/datanizing/m3-llm-workshop/raw/main/sentences.txt"
+    "import os\n",
+    "import urllib.request\n",
+    "\n",
+    "# File name and URL\n",
+    "file_name = \"sentences.txt\"\n",
+    "url = \"https://github.com/datanizing/m3-llm-workshop/raw/main/sentences.txt\"\n",
+    "\n",
+    "# Check if the file exists, if not, download it\n",
+    "if not os.path.isfile(file_name):\n",
+    "    print(f\"{file_name} does not exist. Downloading...\")\n",
+    "    urllib.request.urlretrieve(url, file_name)\n",
+    "    print(f\"Downloaded {file_name}.\")\n",
+    "else:\n",
+    "    print(f\"{file_name} already exists.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "532c4a6c-52d3-4436-9e45-b1e4f870baec",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentences = open(\"sentences.txt\").read().split(\"@@@\")"
+    "sentences = open(\"sentences.txt\", encoding=\"utf-8\").read().split(\"@@@\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sentences)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "447ac753-3f5d-4eed-a51b-581c37856041",
+   "id": "5",
    "metadata": {},
    "source": [
     "# Encode sentences"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a5b9534-ed9a-4836-acd7-84ae23393f3b",
+   "metadata": {},
+   "source": [
+    "Gutes Modell aus dem Leaderboard heraussuchen: Modell https://huggingface.co/spaces/mteb/leaderboard"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca1b2b1-9072-4b60-b8c4-4130b8f8d6dd",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
-    "model = SentenceTransformer('intfloat/e5-base-v2')"
+    "#model_name = \"jinaai/jina-embeddings-v3\"                 # am schnellsten\n",
+    "#model_name = \"intfloat/multilingual-e5-large-instruct\"   # etwas langsamer\n",
+    "model_name = \"Snowflake/snowflake-arctic-embed-l-v2.0\"    # ca. genau so schnell\n",
+    "#model_name = \"infly/inf-retriever-v1-1.5b\"               # etwa 3x langsamer\n",
+    "\n",
+    "model = SentenceTransformer(model_name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b259f42b-9c45-4fee-b319-afcb37625ec4",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# can take a minute or two depending on CPU/GPU configuration\n",
-    "sembeddings = model.encode([\"passage: \" + s for s in sentences], show_progress_bar=True)"
+    "# kann ein bisschen dauern je nach CPU/GPU-Konfiguration\n",
+    "sembeddings = model.encode(sentences, show_progress_bar=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6fb009d-7d0a-4332-a29d-68aea47e2f37",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "with open(\"sentences-e5.npy\", \"wb\") as f:\n",
+    "with open(\"sentences-saev2.npy\", \"wb\") as f:\n",
     "    np.save(f, sembeddings)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53b8bfec-5b4b-44a1-a6ff-a7029d234c62",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9baa068-3e5d-4618-9a2b-4af333d0db67",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,29 +137,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd2eeae8-8eb7-4eb2-9bcc-9191459ede18",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# can take a minute or two depending on CPU/GPU configuration\n",
+    "# etwas schneller\n",
     "sembeddings2 = model2.encode(sentences, show_progress_bar=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "338ee160-3e09-43e5-9d46-387b5b37c256",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "with open(\"sentences-mpnet.npy\", \"wb\") as f:\n",
     "    np.save(f, sembeddings2)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef223143-b88b-4559-b1fd-26ed72195814",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# neue superschnelle Alternative, new in 3.4, speedup 400x CPU to 25x GPU:\n",
+    "model3 = SentenceTransformer(\"minishlab/potion-base-8M\", device=\"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b958f9a0-9fac-4b3c-8a2e-3ee9612b96d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# viel schneller\n",
+    "sembeddings3 = model3.encode(sentences, show_progress_bar=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b066104a-e3ca-468d-a7f6-5e2ede74a0fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"sentences-potion.npy\", \"wb\") as f:\n",
+    "    np.save(f, sembeddings3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "4dddad02-fea3-40a0-b9b2-eb4ad04f910b",
+   "id": "15",
    "metadata": {},
    "source": [
     "# Retrieval"
@@ -132,16 +200,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "416ac725-97c8-4709-aad3-f36cac16a0c7",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search(query, text, corpus_embeddings, model, top=20):\n",
-    "    # code query to restrict search space\n",
-    "    question_embedding = model.encode(query)\n",
+    "def search(query, text, corpus_embeddings, model, prompt_name=\"query\", top=20):\n",
+    "    # query codieren\n",
+    "    query_embedding = model.encode(query, prompt_name=prompt_name)\n",
     "    \n",
     "    # Determine similarity (vectors are normalized)\n",
-    "    sim = np.dot(corpus_embeddings, question_embedding)\n",
+    "    sim =  model.similarity(query_embedding, corpus_embeddings)[0].numpy() \n",
     "    \n",
     "    # Get most similar top by sorting\n",
     "    hits = [ { \"text\": text[i], \"score\": sim[i] } \n",
@@ -154,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b3a0f3f-6a10-406e-938c-ff7573787206",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,51 +233,73 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31901804-2f16-4236-b6c2-7bffb1dc63cd",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"query: Is the climate crisis worse for poorer countries?\", \n",
+    "search(\"Is the climate crisis worse for poorer countries?\", \n",
     "       sentences, sembeddings, model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed14fc30-5640-4891-8ae1-defa57bf21a6",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"query: Is the war on Ukraine caused by Russia?\", \n",
-    "       sentences, sembeddings, model)"
+    "search(\"Is the climate crisis worse for poorer countries?\", \n",
+    "       sentences, sembeddings2, model2, prompt_name=None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "457d9c8f-f013-4965-9232-b4ae20128b4a",
+   "id": "8bd968e3-ea0c-4fd4-aff5-8310bf87f5d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"query: Is the climate crisis worse for poorer countries?\", \n",
-    "       sentences, sembeddings2, model2)"
+    "search(\"Is the climate crisis worse for poorer countries?\", \n",
+    "       sentences, sembeddings3, model3, prompt_name=None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a28cfbcc-6e7f-4e6f-983d-2505bf7841f8",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
     "search(\"Is the war on Ukraine caused by Russia?\", \n",
-    "       sentences, sembeddings2, model2)"
+    "       sentences, sembeddings, model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e93888b2-8108-4d8a-a93b-0e17c171d776",
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search(\"Is the war on Ukraine caused by Russia?\", \n",
+    "       sentences, sembeddings2, model2, prompt_name=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search(\"Is the war on Ukraine caused by Russia?\", \n",
+    "       sentences, sembeddings3, model3, prompt_name=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e037e78a-40bb-4ed2-b776-e048ad98e16e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -231,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
