--- a/01-preparation.ipynb
+++ b/01-preparation.ipynb
@@ -53,21 +53,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs.to_csv(\"newsticker2022-2023.csv.gz\")"
+    "docs[\"quality\"] = \"uncertain\"\n",
+    "docs.loc[docs[\"comments\"] < 10, \"quality\"] = \"bad\"\n",
+    "docs.loc[docs[\"comments\"] > 50, \"quality\"] = \"good\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "docs[\"quality\"] = \"uncertain\"\n",
-    "docs.loc[docs[\"comments\"] < 10, \"quality\"] = \"bad\"\n",
-    "docs.loc[docs[\"comments\"] > 50, \"quality\"] = \"good\"\n",
-    "docs.groupby(\"quality\").agg({ \"text\": \"count\"}).rename(columns={\"text\": \"count\"}).plot.bar(figsize=(10, 7))"
+    "docs.value_counts(\"quality\").plot.bar()"
    ]
   },
   {
@@ -94,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs[docs[\"quality\"]!=\"uncertain\"].set_index(\"id\")[[\"headline\", \"comments\", \"time\", \"quality\"]].to_csv(\"newsticker-2022-2023-good-bad.csv.gz\")"
+    "# docs[docs[\"quality\"]!=\"uncertain\"].set_index(\"id\")[[\"headline\", \"comments\", \"time\", \"quality\"]].to_csv(\"newsticker-2022-2023-good-bad.csv.gz\")"
    ]
   },
   {
@@ -121,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -167,5 +164,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
