--- a/12-similarity-cross-encoder.ipynb
+++ b/12-similarity-cross-encoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b64ece1d-7558-4fb6-a98b-ad06283bb898",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Load data (from previous notebook)"
@@ -11,17 +11,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c08c809-10c6-42aa-9a01-0477ca426b2f",
+   "id": "252db22d-7629-4333-ae1b-cb48585fb4c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentences = open(\"sentences.txt\").read().split(\"@@@\")"
+    "import os\n",
+    "import urllib.request\n",
+    "\n",
+    "# File name and URL\n",
+    "file_name = \"sentences.txt\"\n",
+    "url = \"https://github.com/datanizing/m3-llm-workshop/raw/main/sentences.txt\"\n",
+    "\n",
+    "# Check if the file exists, if not, download it\n",
+    "if not os.path.isfile(file_name):\n",
+    "    print(f\"{file_name} does not exist. Downloading...\")\n",
+    "    urllib.request.urlretrieve(url, file_name)\n",
+    "    print(f\"Downloaded {file_name}.\")\n",
+    "else:\n",
+    "    print(f\"{file_name} already exists.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73220da2-6d8f-42db-95ac-f361449388b5",
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences = open(\"sentences.txt\", encoding=\"utf-8\").read().split(\"@@@\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,29 +54,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d13cb7a-1325-4059-af8c-bbd026ce9a86",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "with open(\"sentences.npy\", \"rb\") as f:\n",
+    "with open(\"sentences-saev2.npy\", \"rb\") as f:\n",
     "    sembeddings = np.load(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "722d2dab-d44d-4a17-bf2c-12d518bc3af9",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"sentences2.npy\", \"rb\") as f:\n",
+    "with open(\"sentences-mpnet.npy\", \"rb\") as f:\n",
     "    sembeddings2 = np.load(f)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c8a656b2-e292-47e4-8c91-066acbf77186",
+   "id": "5",
    "metadata": {},
    "source": [
     "# Retrieval"
@@ -62,18 +85,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d690106a-8751-48c5-80b1-af6078a2a6ee",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "def search(query, text, corpus_embeddings, bi_encoder, cross_encoder, top_k=100):\n",
+    "def search(query, text, corpus_embeddings, bi_encoder, cross_encoder, prompt_name=\"query\", top_k=100):\n",
     "    # code query to restrict search space\n",
-    "    question_embedding = bi_encoder.encode(query)\n",
+    "    query_embedding = bi_encoder.encode(query, prompt_name=prompt_name)\n",
     "    \n",
     "    # Determine similarity (vectors are normalized)\n",
-    "    sim = np.dot(corpus_embeddings, question_embedding)\n",
+    "    sim = model.similarity(query_embedding, corpus_embeddings)[0].numpy() \n",
     "    \n",
     "    # Get most similar top_k by sorting\n",
     "    hits = [ { \"text\": text[i], \"score\": sim[i] } \n",
@@ -98,41 +121,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca1b2b1-9072-4b60-b8c4-4130b8f8d6dd",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# bi-encoder is needed\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "model = SentenceTransformer('multi-qa-MiniLM-L6-cos-v1')"
+    "model = SentenceTransformer(\"Snowflake/snowflake-arctic-embed-l-v2.0\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9610b2aa-8922-44d5-96bd-9ac456a6848d",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2 = SentenceTransformer('multi-qa-mpnet-base-dot-v1')"
+    "model2 = SentenceTransformer('all-mpnet-base-v2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35618b47-7f43-4255-9fb2-2206a0e357ff",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# cross encoder\n",
-    "from sentence_transformers import CrossEncoder, util\n",
+    "from sentence_transformers import CrossEncoder\n",
     "cross_encoder = CrossEncoder('cross-encoder/ms-marco-MiniLM-L-6-v2')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b3a0f3f-6a10-406e-938c-ff7573787206",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,86 +165,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed14fc30-5640-4891-8ae1-defa57bf21a6",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"The climate crisis is worse in poorer countries\", sentences, sembeddings, model, cross_encoder)"
+    "search(\"Is the climate crisis worse for poorer countries?\", \n",
+    "       sentences, sembeddings, model, cross_encoder, prompt_name=\"query\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c74a59a4-e0ad-4f2c-b90f-bc183adb34dc",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"The climate crisis is worse in poorer countries\", sentences, sembeddings2, model2, cross_encoder)"
+    "search(\"Is the climate crisis worse for poorer countries?\", \n",
+    "       sentences, sembeddings2, model2, cross_encoder, prompt_name=None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f989288e-c8fc-4645-9933-f2adc149e323",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b7280ca-f4bd-4325-bd50-69e9cd4dcb72",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6982850f-4b40-443d-968b-3a61dfa9fdfd",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"Which countries are impacted most by the climate crisis?\", sentences, sembeddings, model, cross_encoder)"
+    "search(\"Which countries are impacted most by the climate crisis?\", \n",
+    "       sentences, sembeddings, model, cross_encoder)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "861624ea-2bc7-44d0-95c9-9ddee3f3958e",
+   "id": "489dafe9-9936-4a84-bbc0-8107c7a34611",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scross_encoder = CrossEncoder(\"cross-encoder/qnli-electra-base\")"
+    "search(\"Which countries are impacted most by the climate crisis?\", \n",
+    "       sentences, sembeddings2, model2, cross_encoder, prompt_name=None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93cca724-67de-4c94-b255-998398fef3f6",
+   "id": "b664891b-5418-4f28-9de5-3e54aea9c3b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "search(\"Which countries are impacted most by the climate crisis?\", sentences, sembeddings, model, scross_encoder)"
+    "# eine von vielen weiteren Alternativen:\n",
+    "cross_encoder = CrossEncoder(\"jinaai/jina-reranker-v2-base-multilingual\",\n",
+    "    automodel_args={\"torch_dtype\": \"auto\"},\n",
+    "    trust_remote_code=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d722386b-6444-4825-ad7e-d30029b72cf2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "search(\"Welche Länder sind am meisten von der Klimakrise betroffen?\", sentences, sembeddings, model, scross_encoder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ccf094c-c70f-49c6-afac-e396bc91933a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -240,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
