requirements.txt aktualisiert, Embeddings in GitHub

--- a/02-bert-classification.ipynb
+++ b/02-bert-classification.ipynb
@@ -183,7 +183,7 @@
     "# Python-Listen in Tensoren wandeln\n",
     "input_ids = torch.cat(input_ids, dim=0)\n",
     "attention_masks = torch.cat(attention_masks, dim=0)\n",
-    "labels = labels.clone().detach()\n",
+    "labels = torch.tensor(labels) #labels.clone().detach()\n",
     "\n",
     "# Headline, Tokenisierung und IDs anzeigen\n",
     "print(text[0])\n",
