--- a/10-data-text-preparation.ipynb
+++ b/10-data-text-preparation.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "data = []\n",
     "for n in glob.glob(\"un/TXT/Session 78 - 2023/*.txt\"):\n",
-    "    data.append({\"country\": os.path.basename(n.replace(\"_77_2022.txt\", \"\")), \"text\": open(n).read() })"
+    "    data.append({\"country\": os.path.basename(n.replace(\"_78_2023.txt\", \"\")), \"text\": open(n, encoding=\"UTF-8\").read() })"
    ]
   },
   {
