--- a/31a-qwen2-05-full-finetune.ipynb
+++ b/31a-qwen2-05-full-finetune.ipynb
@@ -24,6 +24,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d17de408-555d-4db6-89b4-987520b1feb2",
+   "metadata": {},
+   "source": [
+    "Bei Colab: bitte Dataset herunterladen mit\n",
+    "```\n",
+    "!wget https://github.com/datanizing/m3-llm-workshop/raw/refs/heads/main/ai-abstract-dataset.jsonl.xz\n",
+    "````"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "96929804-9ddb-4a58-b399-1c593aaba716",
