--- a/34a-phi3-unsloth.ipynb
+++ b/34a-phi3-unsloth.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "c55fe162-37a6-4a6b-9aa5-09794e884a8b",
-   "metadata": {},
-   "source": [
-    "Notebook adapted from unsloth: https://colab.research.google.com/github/unslothai/notebooks/blob/main/nb/Phi_3.5_Mini-Conversational.ipynb"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "996bca0f",
@@ -17,6 +9,17 @@
    "source": [
     "import torch\n",
     "torch.cuda.get_device_name(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b735080-2560-42a8-91ba-f671f04c7639",
+   "metadata": {},
+   "source": [
+    "Bei Colab: bitte Dataset herunterladen mit\n",
+    "```\n",
+    "!wget https://github.com/datanizing/m3-llm-workshop/raw/refs/heads/main/ai-abstract-dataset.jsonl.xz\n",
+    "````"
    ]
   },
   {
@@ -78,7 +81,8 @@
    "metadata": {},
    "source": [
     "Remember the template format:\n",
-    "```<|system|>\n",
+    "```\n",
+    "<|system|>\n",
     "You are a helpful travel assistant.<|end|>\n",
     "<|user|>\n",
     "I am going to Paris, what should I see?<|end|>\n",
