--- a/02-bert-classification.ipynb
+++ b/02-bert-classification.ipynb
@@ -368,7 +368,7 @@
     "        # Rückwärts-Auswertung, um Gradienten zu bestimmen\n",
     "        res.loss.backward()\n",
     "\n",
-    "        # Gradient beschrÃ¤nken wegen Exploding Gradient\n",
+    "        # Gradient beschränken wegen Exploding Gradient\n",
     "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
     "\n",
     "        # Parameter und Lernrate aktualisieren\n",
@@ -397,7 +397,7 @@
     "        \n",
     "        # Rückwärts-Auswertung wird nicht benötigt, daher auch kein Gradient\n",
     "        with torch.no_grad():        \n",
-    "            # Vorhersage durchfÃ¼hren\n",
+    "            # Vorhersage durchführen\n",
     "            res = model(b_input_ids, \n",
     "                                   token_type_ids=None, \n",
     "                                   attention_mask=b_input_mask,\n",
