--- a/11-similarity-embeddings.ipynb
+++ b/11-similarity-embeddings.ipynb
@@ -302,6 +302,17 @@
    "id": "e037e78a-40bb-4ed2-b776-e048ad98e16e",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "search(\"Sind arme Länder durch die Klimakrise stärker betroffen?\", \n",
+    "       sentences, sembeddings, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48872960-5e8c-4eae-a08d-050b94061dd7",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
