--- a/13-similarity-cross-encoder.ipynb
+++ b/13-similarity-cross-encoder.ipynb
@@ -225,6 +225,17 @@
    "id": "5d6b1786-0dc9-438c-8dce-e5d43a6e1be6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "search(\"Sind arme Länder durch die Klimakrise stärker betroffen?\", \n",
+    "       sentences, sembeddings, model, cross_encoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ade15910-6a3a-407a-9a64-14a2ae5d1829",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
