--- a/21b-qwen2.5-7b.ipynb
+++ b/21b-qwen2.5-7b.ipynb
@@ -190,6 +190,16 @@
    "id": "0cc0fc78-dc34-4e10-85db-68cf60d2cf49",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5772496e-92f3-47ad-b6f4-798699646eea",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
