--- a/22-qwen-7b-gptq.ipynb
+++ b/22-qwen-7b-gptq.ipynb
@@ -102,6 +102,50 @@
    "id": "9e08a1f3",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "result = model.generate('<|im_start|>system\\nDu bist ein hilfreicher Assistent.<|im_end|>\\n<|im_start|>user\\nErkläre den Heise Zeitschriftenverlag<|im_end|>\\n<|im_start|>assistant\\n', max_new_tokens=512)\n",
+    "used = time.time() - start\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46b9ec2e-e042-4f9a-8c97-1129edc13c90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model.tokenizer.decode(result[0])) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b67857d6-500b-486e-84db-6cbb8bd5e60d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "808ab2ab-28ee-4874-ab5a-24dded43537d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result[0].shape[0]/used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afa482fc-1453-4864-81f9-c41a2d9b404a",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
