--- a/24-qwen-7b-exl2.ipynb
+++ b/24-qwen-7b-exl2.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"Erkläre den Heise Zeitschriftenverlag\""
+    "prompt = '<|im_start|>system\\nDu bist ein hilfreicher Assistent.<|im_end|>\\n<|im_start|>user\\nErkläre den Heise Zeitschriftenverlag<|im_end|>\\n<|im_start|>assistant\\n'"
    ]
   },
   {
