--- a/34b-phi3.ipynb
+++ b/34b-phi3.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
-    "from unsloth import FastLanguageModel"
+    "from unsloth import FastLanguageModel\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer.chat_template"
+    "print(tokenizer.chat_template)"
    ]
   },
   {
@@ -181,9 +181,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "unsloth",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "unsloth"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
