--- a/01-preparation.ipynb
+++ b/01-preparation.ipynb
@@ -104,9 +104,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -118,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   },
   "toc": {
    "base_numbering": 1,
