--- a/03-svm.ipynb
+++ b/03-svm.ipynb
@@ -66,6 +66,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from spacy.lang.de.stop_words import STOP_WORDS as stop_words\n",
     "tfidf_vectorizer = TfidfVectorizer(stop_words=list(stop_words), min_df=2, ngram_range=(1,2))\n",
@@ -112,7 +121,8 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_test, pred_test)"
+    "cf = pd.DataFrame(confusion_matrix(y_test, pred_test))\n",
+    "cf"
    ]
   },
   {
@@ -121,10 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "plt.figure(figsize=(10,8))\n",
-    "sns.heatmap(confusion_matrix(y_test, pred_test), annot=True)"
+    "cf.style.background_gradient(cmap='coolwarm')"
    ]
   },
   {
@@ -152,9 +159,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
