--- a/10-data-text-preparation.ipynb
+++ b/10-data-text-preparation.ipynb
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# runs 30 seconds or so\n",
+    "# braucht weniger als eine Minute\n",
     "sentences = []\n",
     "for text in tqdm(df[\"text\"]):\n",
     "    doc = nlp(text)\n",
@@ -157,9 +157,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -171,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
