--- a/11-similarity-embeddings.ipynb
+++ b/11-similarity-embeddings.ipynb
@@ -181,6 +181,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fdee8ea0-dbcf-4de5-ae8b-de7c37fa92bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sembeddings3.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b066104a-e3ca-468d-a7f6-5e2ede74a0fe",
    "metadata": {},
    "outputs": [],
@@ -318,9 +328,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -332,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
