--- a/12-sbert-finetune.ipynb
+++ b/12-sbert-finetune.ipynb
@@ -49,8 +49,8 @@
    "source": [
     "import pandas as pd\n",
     "pd.set_option('display.max_colwidth', None)\n",
-    "df = pd.DataFrame(train_dataset)\n",
-    "df.head()"
+    "df = train_dataset.to_pandas()\n",
+    "df.head().style.background_gradient(cmap='coolwarm')"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sample(20, random_state=42)"
+    "df.sample(20, random_state=42).style.background_gradient(cmap='coolwarm')"
    ]
   },
   {
@@ -242,6 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "test_evaluator(model)"
    ]
   },
@@ -251,14 +252,25 @@
    "id": "1516f075-876f-4d3a-9dd6-bbc942d37de6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import torch\n",
+    "torch.set_float32_matmul_precision('high')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec53c690-93cc-4307-81a3-56b0e4aafc45",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -270,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
