--- a/13-similarity-cross-encoder.ipynb
+++ b/13-similarity-cross-encoder.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "search(\"Is the climate crisis worse for poorer countries?\", \n",
-    "       sentences, sembeddings, model, cross_encoder, prompt_name=\"query\")"
+    "       sentences, sembeddings, model, cross_encoder, prompt_name=\"query\").style.background_gradient(cmap='coolwarm')"
    ]
   },
   {
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "search(\"Is the climate crisis worse for poorer countries?\", \n",
-    "       sentences, sembeddings2, model2, cross_encoder, prompt_name=None)"
+    "       sentences, sembeddings2, model2, cross_encoder, prompt_name=None).style.background_gradient(cmap='coolwarm')"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "search(\"Which countries are impacted most by the climate crisis?\", \n",
-    "       sentences, sembeddings, model, cross_encoder)"
+    "       sentences, sembeddings, model, cross_encoder).style.background_gradient(cmap='coolwarm')"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "outputs": [],
    "source": [
     "search(\"Which countries are impacted most by the climate crisis?\", \n",
-    "       sentences, sembeddings2, model2, cross_encoder, prompt_name=None)"
+    "       sentences, sembeddings2, model2, cross_encoder, prompt_name=None).style.background_gradient(cmap='coolwarm')"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "source": [
     "# eine von vielen weiteren Alternativen:\n",
     "cross_encoder = CrossEncoder(\"jinaai/jina-reranker-v2-base-multilingual\",\n",
-    "    automodel_args={\"torch_dtype\": \"auto\"},\n",
+    "    model_kwargs={\"torch_dtype\": \"auto\"},\n",
     "    trust_remote_code=True)"
    ]
   },
@@ -227,7 +227,7 @@
    "outputs": [],
    "source": [
     "search(\"Sind arme Länder durch die Klimakrise stärker betroffen?\", \n",
-    "       sentences, sembeddings, model, cross_encoder)"
+    "       sentences, sembeddings, model, cross_encoder).style.background_gradient(cmap='coolwarm')"
    ]
   },
   {
@@ -236,14 +236,25 @@
    "id": "ade15910-6a3a-407a-9a64-14a2ae5d1829",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "search(\"Welche Länder sind durch die Klimakrise am meisten betroffen?\", \n",
+    "       sentences, sembeddings, model, cross_encoder).style.background_gradient(cmap='coolwarm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d3c968-a220-4252-af60-e3adfcc9f9b2",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -255,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
