--- a/32a-llama32-1.ipynb
+++ b/32a-llama32-1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8299622c-337f-4df9-a061-b4620cd65938",
+   "metadata": {},
+   "source": [
+    "ideas and script from https://www.philschmid.de/fine-tune-llms-in-2025"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "854dde0d-4501-4708-9d00-7ce258349e4e",
@@ -21,17 +29,6 @@
    "metadata": {},
    "source": [
     "# Arguments and Configuration"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e839db89-f024-43aa-a715-e8daa22ca0de",
-   "metadata": {},
-   "source": [
-    "Bei Colab: bitte Dataset herunterladen mit\n",
-    "```\n",
-    "!wget https://github.com/datanizing/m3-llm-workshop/raw/refs/heads/main/ai-abstract-dataset.jsonl.xz\n",
-    "````"
    ]
   },
   {
@@ -85,14 +82,14 @@
     "     num_train_epochs=1,\n",
     "     bf16=True,\n",
     "     packing=True,\n",
-    "     max_seq_length=1024,\n",
+    "     max_length=1024,\n",
     "     per_device_train_batch_size=8,\n",
     "     gradient_accumulation_steps=2,\n",
     "     gradient_checkpointing=True,\n",
     "     gradient_checkpointing_kwargs = { \"use_reentrant\": False },\n",
     "     learning_rate=2.0e-4,\n",
     "     lr_scheduler_type=\"constant\",\n",
-    "     use_liger=True,\n",
+    "     use_liger_kernel=True,\n",
     "     warmup_ratio=0.1,\n",
     ")"
    ]
@@ -158,7 +155,7 @@
     "    revision=model_args.model_revision, # What revision from Huggingface to use, defaults to main\n",
     "    trust_remote_code=model_args.trust_remote_code, # Whether to trust the remote code, this also you to fine-tune custom architectures\n",
     "    attn_implementation=model_args.attn_implementation, # What attention implementation to use, defaults to flash_attention_2\n",
-    "    torch_dtype=model_args.torch_dtype, # What torch dtype to use, defaults to auto\n",
+    "    dtype=model_args.torch_dtype, # What torch dtype to use, defaults to auto\n",
     "    use_cache=False if training_args.gradient_checkpointing else True, # Whether\n",
     "    low_cpu_mem_usage=True,  # Reduces memory usage on CPU for loading the model\n",
     ")"
@@ -175,8 +172,8 @@
     "    load_in_4bit=True,\n",
     "    bnb_4bit_use_double_quant=True,\n",
     "    bnb_4bit_quant_type='nf4',\n",
-    "    bnb_4bit_compute_dtype=model_kwargs['torch_dtype'],\n",
-    "    bnb_4bit_quant_storage=model_kwargs['torch_dtype'],\n",
+    "    bnb_4bit_compute_dtype=model_kwargs['dtype'],\n",
+    "    bnb_4bit_quant_storage=model_kwargs['dtype'],\n",
     ")\n",
     "\n",
     "peft_config = get_peft_config(model_args)"
@@ -211,7 +208,7 @@
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=train_dataset,\n",
-    "    tokenizer=tokenizer,\n",
+    "    processing_class=tokenizer,\n",
     "    peft_config=peft_config,\n",
     ")\n",
     "trainer.model.print_trainable_parameters()"
@@ -274,9 +271,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -288,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
