--- a/32b-llama32-1.ipynb
+++ b/32b-llama32-1.ipynb
@@ -34,7 +34,7 @@
     "                                             revision='main',\n",
     "                                             trust_remote_code=False,\n",
     "                                             attn_implementation='flash_attention_2',\n",
-    "                                             torch_dtype=torch.bfloat16,\n",
+    "                                             dtype=torch.bfloat16,\n",
     "                                             use_cache=False,\n",
     "                                             device_map=\"cuda\",\n",
     "                                             low_cpu_mem_usage=True)"
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer.chat_template"
+    "print(tokenizer.chat_template)"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "outputs": [],
    "source": [
     "outputs = model.generate(inputs, max_new_tokens = 512, use_cache = True,\n",
-    "                         do_sample=False, temperature=None)"
+    "                         do_sample=False, temperature=0)"
    ]
   },
   {
@@ -197,7 +197,7 @@
    "outputs": [],
    "source": [
     "outputs = model.generate(inputs, max_new_tokens = 512, use_cache = True,\n",
-    "                         do_sample=False, temperature=None)\n",
+    "                         do_sample=False, temperature=0)\n",
     "print(tokenizer.batch_decode(outputs)[0])"
    ]
   },
@@ -235,9 +235,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
