--- a/33b-smollm2-1.ipynb
+++ b/33b-smollm2-1.ipynb
@@ -34,7 +34,7 @@
     "                                             revision='main',\n",
     "                                             trust_remote_code=False,\n",
     "                                             attn_implementation='flash_attention_2',\n",
-    "                                             torch_dtype=torch.bfloat16,\n",
+    "                                             dtype=torch.bfloat16,\n",
     "                                             use_cache=False,\n",
     "                                             device_map=\"cuda\",\n",
     "                                             low_cpu_mem_usage=True)"
@@ -74,19 +74,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9f2861f-60e6-4a6f-ad7f-e30afd1ce364",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Restore k,v cache for fast inference\n",
-    "model.config.use_cache = True\n",
-    "model.save_pretrained(\"smol-ai\")\n",
-    "tokenizer.save_pretrained(\"smol-ai\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "24eab4c5-eb21-4d92-80db-b2647399a14b",
    "metadata": {},
    "outputs": [],
@@ -101,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer.chat_template"
+    "print(tokenizer.chat_template)"
    ]
   },
   {
@@ -207,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "python3"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
