--- a/34a-phi3-unsloth.ipynb
+++ b/34a-phi3-unsloth.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c55fe162-37a6-4a6b-9aa5-09794e884a8b",
+   "metadata": {},
+   "source": [
+    "Notebook adapted from unsloth: https://colab.research.google.com/github/unslothai/notebooks/blob/main/nb/Phi_3.5_Mini-Conversational.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "996bca0f",
@@ -9,17 +17,6 @@
    "source": [
     "import torch\n",
     "torch.cuda.get_device_name(0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b735080-2560-42a8-91ba-f671f04c7639",
-   "metadata": {},
-   "source": [
-    "Bei Colab: bitte Dataset herunterladen mit\n",
-    "```\n",
-    "!wget https://github.com/datanizing/m3-llm-workshop/raw/refs/heads/main/ai-abstract-dataset.jsonl.xz\n",
-    "````"
    ]
   },
   {
@@ -58,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prepare a perft model for fine-tuning with a lora adapter\n",
+    "# prepare a peft model for fine-tuning with a lora adapter\n",
     "model = FastLanguageModel.get_peft_model(\n",
     "    model,\n",
     "    r = 16,\n",
@@ -81,8 +78,7 @@
    "metadata": {},
    "source": [
     "Remember the template format:\n",
-    "```\n",
-    "<|system|>\n",
+    "```<|system|>\n",
     "You are a helpful travel assistant.<|end|>\n",
     "<|user|>\n",
     "I am going to Paris, what should I see?<|end|>\n",
@@ -110,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer.chat_template"
+    "print(tokenizer.chat_template)"
    ]
   },
   {
@@ -155,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset[1][\"text\"]"
+    "print(dataset[1][\"text\"])"
    ]
   },
   {
@@ -255,30 +251,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d189d036",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
-    "\n",
-    "messages = [\n",
-    "    {\"role\": \"user\", \"content\": \"Write an abstract with the title 'New developments in Random Forest Classification'\"},\n",
-    "]\n",
-    "inputs = tokenizer.apply_chat_template(\n",
-    "    messages,\n",
-    "    tokenize = True,\n",
-    "    add_generation_prompt = True, # Must add for generation\n",
-    "    return_tensors = \"pt\",\n",
-    ").to(\"cuda\")\n",
-    "\n",
-    "from transformers import TextStreamer\n",
-    "text_streamer = TextStreamer(tokenizer, skip_prompt = True)\n",
-    "_ = model.generate(input_ids = inputs, streamer = text_streamer, max_new_tokens = 128, use_cache = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "66537673-dfa7-4f9b-8e69-70a7befd65a2",
    "metadata": {},
    "outputs": [],
@@ -287,9 +259,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "unsloth",
+   "display_name": "finetuning",
    "language": "python",
-   "name": "unsloth"
+   "name": "finetuning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -301,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
