--- a/11-similarity-embeddings.ipynb
+++ b/11-similarity-embeddings.ipynb
@@ -323,6 +323,17 @@
    "id": "48872960-5e8c-4eae-a08d-050b94061dd7",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "search(\"候危机对贫穷国家的影响更大吗？\", \n",
+    "       sentences, sembeddings, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2717275d-5a53-4f07-9419-2446fb4c80e3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
