--- a/13-similarity-cross-encoder.ipynb
+++ b/13-similarity-cross-encoder.ipynb
@@ -215,7 +215,7 @@
    "source": [
     "# eine von vielen weiteren Alternativen:\n",
     "cross_encoder = CrossEncoder(\"jinaai/jina-reranker-v2-base-multilingual\",\n",
-    "    model_kwargs={\"torch_dtype\": \"auto\"},\n",
+    "    model_kwargs={\"dtype\": \"auto\"},\n",
     "    trust_remote_code=True)"
    ]
   },
