--- a/14-create-sbert-data-qwen-reranker.ipynb
+++ b/14-create-sbert-data-qwen-reranker.ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dft[\"scores\"] = scores"
+    "dft[\"scores_i\"] = scores"
    ]
   },
   {
