--- a/21b-qwen3-8b.ipynb
+++ b/21b-qwen3-8b.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"Erkläre den Heise Zeitschriftenverlag\"\n",
+    "prompt = \"Erkläre den Heise Verlag\"\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": \"Du bist ein hilfreicher Assistent.\"},\n",
     "    {\"role\": \"user\", \"content\": prompt}\n",
@@ -65,7 +65,7 @@
     "    enable_thinking=False,\n",
     "    add_generation_prompt=True\n",
     ")\n",
-    "text"
+    "print(text)"
    ]
   },
   {
