--- a/22-qwen3-8b-awq.ipynb
+++ b/22-qwen3-8b-awq.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name, use_fast=True)\n",
     "\n",
-    "prompt = \"Erkläre den Heise Zeitschriftenverlag\"\n",
+    "prompt = \"Erkläre den Heise Verlag\"\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": \"Du bist ein hilfreicher Assistent.\"},\n",
     "    {\"role\": \"user\", \"content\": prompt}\n",
