--- a/24-qwen-8b-stream-exl2.ipynb
+++ b/24-qwen-8b-stream-exl2.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_directory = \"/home/cwinkler/oreilly/models/Qwen3-8B-exl2\""
+    "model_directory = \"/home/cwinkler/m3-llm/models/Qwen3-8B-exl2\""
    ]
   },
   {
@@ -87,8 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"\"\"<|im_start|>system\\nDu bist ein hilfreicher Assistent.<|im_end|>\n",
-    "<|im_start|>user\\nErkläre den Heise Verlag!<|im_end|>\n",
+    "prompt = \"\"\"<|im_start|>system\n",
+    "Du bist ein hilfreicher Assistent.<|im_end|>\n",
+    "<|im_start|>user\n",
+    "Erkläre den Heise Verlag!<|im_end|>\n",
     "<|im_start|>assistant\n",
     "<think>\n",
     "\n",
