--- a/23-qwen3-8b-exl2.ipynb
+++ b/23-qwen3-8b-exl2.ipynb
@@ -53,8 +53,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"\"\"<|im_start|>system\\nDu bist ein hilfreicher Assistent.<|im_end|>\n",
-    "<|im_start|>user\\nErkläre den Heise Verlag!<|im_end|>\n",
+    "prompt = \"\"\"<|im_start|>system\n",
+    "Du bist ein hilfreicher Assistent.<|im_end|>\n",
+    "<|im_start|>user\n",
+    "Erkläre den Heise Verlag!<|im_end|>\n",
     "<|im_start|>assistant\n",
     "<think>\n",
     "\n",
