--- a/11-similarity-embeddings.ipynb
+++ b/11-similarity-embeddings.ipynb
@@ -148,6 +148,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "508572b4-c688-46d8-af03-4bb34aaf7003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sembeddings2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "14",
    "metadata": {},
    "outputs": [],
